--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -404,23 +404,34 @@ input[type='submit']:hover, input[type='submit']:focus {
 }
 
 .action-data form {
-  display: inline;
+	display: inline;
 }
 
 .action-data button {
-  background: none;
-  border: none;
-  color: blue;
-  text-decoration: underline;
-  cursor: pointer;
-  font-size: 1em;
-  font-family: serif;
-  margin: 0;
-  padding: 0 5px;
+	background: none;
+	border: none;
+	color: blue;
+	text-decoration: underline;
+	cursor: pointer;
+	font-size: 1em;
+	font-family: serif;
+	margin: 0;
+	padding: 0 5px;
 }
 
 .action-data button:focus,
 .action-data button:hover{
-  outline: none;
-  text-decoration: none;
+	outline: none;
+	text-decoration: none;
+}
+
+input[type='checkbox'] {
+	width: 13px;
+	height: 13px;
+	padding: 5px;
+	margin: 5px;
+	vertical-align: bottom;
+	position: relative;
+	top: -1px;
+ 	overflow: hidden;
 }
